--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,10 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
-
+li{ 
+    list-style-type: none;
+    float: right;
+}
 a {
     color: #ffffff;
     text-decoration: none;
@@ -68,7 +71,6 @@ p {
     float: right;
     margin-left: 25px;
 }
-
 .content {
     width: 75%;
     display: inline-block;
