--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,11 +71,11 @@ p {
     float: right;
     margin-left: 25px;
 }
-.content {
+/* .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
-}
+} */ 
 
 .benefits {
     margin-right: 20px;
