--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,13 +70,12 @@ p {
 .float-right {
     float: right;
     margin-left: 25px;
-}
-/* .content {
+} 
+.content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
-} */ 
-
+}
 .benefits {
     margin-right: 20px;
     padding: 20px;
